--- a/Product/style.css
+++ b/Product/style.css
@@ -90,7 +90,7 @@ header.common-toggle-active {
   color: #333;
 }
 .common-search-box-header {
-  display: none;
+  display: flex;
   /*Main메뉴 제외하고 모두 display block*/
   position: fixed;
   right: 120px;
@@ -101,6 +101,7 @@ header.common-toggle-active {
   border-radius: 10px;
   /* margin-right: 60px; */
   background: rgba(231, 232, 234, 0.5);
+  z-index: -2;
 }
 #common-search-box-header-inner {
   width: 90%;
@@ -110,6 +111,9 @@ header.common-toggle-active {
   color: #777;
   border: none;
   background: none;
+}
+.common-search-box-header i {
+  opacity: 0;
 }
 #common-search-box-header-inner:focus {
   outline: none;
@@ -1575,34 +1579,62 @@ header.common-toggle-active {
   display: flex;
   margin: 0 0 15px 25px;
   gap: 10px;
-  border: 1px solid red;
 }
 
 .pro-product-list li {
-  width: 32%;
-  height: auto;
+  position: relative;
+  width: 25%;
+  min-width: 250px;
+  height: 480px;
+  max-height: 480px;
   border-radius: 5px;
   background: #eee;
   margin-bottom: 20px;
-  border: 1px solid red;
 }
-/*.pro-product-list li > a {
+
+/* .pro-product-list li > a {
   display: inline-block;
+} */
+.product-new {
+  width: 34px;
+  padding: 4px 0;
+  position: absolute;
+  left: 8px;
+  top: 5px;
+  font-family: "sofia";
+  font-size: 12px;
+  font-weight: 600;
+  text-align: center;
+  border-radius: 5px;
+  background: #222;
+  color: #fff;
 }
 .pro-product-list li a img {
   width: 100%;
+  min-width: 250px;
   border-radius: 5px 5px 0 0;
+  transition: opacity 0.5s;
+}
+/* .product-imgHover {
+  opacity: 0;
+  transition: opacity 0.5s;
+} */
+/* .pro-product-list li a img:hover .product-imgHover {
+  opacity: 1;
 } */
 .product-detail {
   font-family: "sofia";
   display: flex;
   flex-direction: column;
-  width: 88%;
+  width: 90%;
   height: 120px;
   padding: 10px 15px;
-  position: relative;
-  background: #ef426f;
+  position: absolute;
+  top: 65%;
+  left: 0;
+  border: 1px solid red;
 }
+
 /*.product-detail span:nth-child(1) {
   display: inline-block;
   margin-bottom: 4px;
