--- a/240308/style04.css
+++ b/240308/style04.css
@@ -153,12 +153,12 @@ figure {
   background: #777;
   position: relative;
   overflow: hidden;
-  filter: saturate(10%);
+  /* filter: saturate(10%); */
   transition: all 1s;
 }
 article:hover figure {
   height: 25vh;
-  filter: saturate(120%);
+  /* filter: saturate(120%); */
   transform: translateY(3vh);
 }
 video {
@@ -166,4 +166,49 @@ video {
   height: 100%;
   object-fit: cover;
   transform: scale(1.1);
+}
+/*aside*/
+aside {
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100vh;
+  opacity: 0;
+  padding: 20vh 7vw 14vh 20vw;
+  display: flex;
+  justify-content: center;
+  transition: all 1.5s;
+  background: #222;
+}
+aside.on {
+  left: 0;
+  opacity: 1;
+  z-index: 2;
+}
+aside .txt {
+  width: 25%;
+}
+aside .txt h1 {
+  font: normal 5vw/1 "arial";
+  color: #ddd;
+  margin-bottom: 20px;
+}
+aside .txt p {
+  font: normal 1.1vw/1.3 "arial";
+  color: #666;
+  margin-bottom: 60px;
+}
+aside .txt span {
+  cursor: pointer;
+  color: orange;
+}
+main aside figure {
+  width: 72%;
+  height: 100%;
+}
+figure video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
