--- a/Header/style.css
+++ b/Header/style.css
@@ -153,16 +153,25 @@ header.common-toggle-active {
 }
 .common-toggle-btn {
   position: relative;
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+}
+.common-trigger-btn {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   cursor: pointer;
+  width: 20px;
+  height: 20px;
 }
 
-.common-toggle-btn span {
+.common-trigger-btn span,
+.common-repon-toggle-btn span {
   position: absolute;
-  top: 0%;
-  left: 8px;
+  top: 0;
+  left: 0;
   display: block;
   width: 23px;
   height: 2px;
@@ -170,26 +179,38 @@ header.common-toggle-active {
   background: #333;
   transition: all 0.5s;
 }
-.common-toggle-btn span:nth-child(1) {
+.common-trigger-btn span:nth-child(1),
+.common-repon-toggle-btn span:nth-child(1) {
   top: 0;
 }
-.common-toggle-btn span:nth-child(2) {
+.common-trigger-btn span:nth-child(2),
+.common-repon-toggle-btn span:nth-child(2) {
   top: 50%;
 }
-.common-toggle-btn span:nth-child(3) {
+.common-trigger-btn span:nth-child(3),
+.common-repon-toggle-btn span:nth-child(3) {
   top: 100%;
 }
-.common-toggle-btn.active span:nth-child(2) {
+.common-trigger-btn.active span:nth-child(2) {
   opacity: 0;
 }
-.common-toggle-btn.active span:nth-child(1) {
+.common-trigger-btn.active span:nth-child(1) {
   top: 50%;
   transform: rotate(45deg);
 }
-.common-toggle-btn.active span:nth-child(3) {
+.common-trigger-btn.active span:nth-child(3) {
   top: 50%;
   transform: rotate(-45deg);
 }
+.common-repon-toggle-btn {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 30px;
+  height: 20px;
+  display: none;
+}
+
 .common-header-menu {
   position: relative;
   width: 1454px;
@@ -1154,8 +1175,10 @@ header.common-toggle-active {
   opacity: 1;
 }
 
+/*----------Desktop footer-----------*/
+
 footer {
-  height: 386px;
+  height: auto;
   width: 100%;
   background: #f7f7f7;
   color: #777;
@@ -1163,12 +1186,10 @@ footer {
 }
 .common-footer-wrap {
   width: 78%;
-  height: 304px;
-  /* border: 1px solid red; */
   margin: 0 auto;
+  padding: 20px 0 90px;
   display: flex;
   flex-direction: column;
-  padding-top: 20px;
 }
 .common-footer-arrayone {
   display: flex;
@@ -1185,8 +1206,10 @@ footer {
   padding-right: 3px;
 }
 .common-footer-arrayone > a {
+  display: inline-block;
   font-size: 13px;
   color: #333;
+  margin-left: 60px;
 }
 .common-footer-arrayone > a i {
   padding-left: 8px;
@@ -1198,13 +1221,14 @@ footer {
   gap: 16px;
   position: relative;
 }
-.common-footer-family {
+.common-footer-family,
+.common-footer-Map {
   display: flex;
   width: 200px;
-  height: 40px;
-  padding: 5px 10px;
+  height: 30px;
+  padding: 0 10px;
   justify-content: space-between;
-  border-bottom: 1px solid #777;
+  border-bottom: 1px solid #333;
 }
 .common-footer-family a:first-child {
   font-size: 16px;
@@ -1238,14 +1262,7 @@ footer {
 .common-footer-family-hidden a:hover {
   background: #f7f7f7;
 }
-.common-footer-Map {
-  display: flex;
-  justify-content: space-between;
-  width: 200px;
-  height: 40px;
-  padding: 5px 10px;
-  border-bottom: 1px solid #777;
-}
+
 .common-footer-Map a:first-child {
   font-size: 16px;
   font-weight: bold;
@@ -1256,7 +1273,7 @@ footer {
   display: none;
   position: absolute;
   right: 0;
-  bottom: 55px;
+  bottom: 46px;
   width: 1080px;
   background: #fff;
   height: 480px;
@@ -1329,7 +1346,8 @@ footer {
 .common-footer-arraytwo {
   display: flex;
   gap: 28px;
-  padding-top: 10px;
+  flex-wrap: wrap;
+  padding-top: 20px;
   font-size: 14px;
   color: #333;
 }
@@ -1338,13 +1356,27 @@ footer {
   display: inline-block;
   border-right: 1px solid #ddd;
 }
+.common-footer-arraytwo li:nth-child(2) {
+  display: none;
+}
 .common-footer-arraytwo li:last-child {
   border: none;
+}
+.footer-active-vi {
+  display: none;
+  gap: 20px;
+  padding-top: 20px;
+  font-family: "sofia";
+  font-size: 14px;
+  font-weight: normal;
+  color: #333;
+}
+.footer-active-vi a {
+  color: #171c8f;
 }
 .common-footer-arraythree {
   display: flex;
   padding-top: 40px;
-
   justify-content: space-between;
 }
 .common-footer-owner {
@@ -1401,10 +1433,8 @@ footer {
   display: flex;
   flex-direction: column;
 }
-
 .common-footer-arrayfour {
   display: flex;
-  border: 1px solid red;
   margin-top: 40px;
   color: #171c8f;
   font-size: 11px;
@@ -1414,17 +1444,16 @@ footer {
 }
 .common-footer-social {
   display: flex;
-  gap: 15px;
+  gap: 18px;
 }
 .common-footer-social svg {
   width: 24px;
   height: 24px;
 }
-.common-footer-social svg path {
-  color: #777;
-}
+
 /*-------- 1024px -------- */
 @media screen and (max-width: 1024px) {
+  /*----------Header-----------*/
   header {
     height: 328px;
   }
@@ -1619,5 +1648,102 @@ footer {
   }
   .common-responsibility-toggle-menu.active {
     top: 0;
+  }
+
+  /*----------footer-----------*/
+  .common-footer-wrap {
+    width: 96%;
+  }
+  .common-footer-site {
+    display: none;
+  }
+  .common-footer-family-hidden {
+    display: block;
+  }
+  .common-footer-arraytwo {
+    padding-left: 10px;
+  }
+  .common-footer-arraytwo li:nth-child(2) {
+    display: block;
+  }
+  .footer-active-vi {
+    display: flex;
+    padding-left: 10px;
+  }
+  .common-footer-contact {
+    flex-direction: column;
+    gap: 5px;
+    width: 440px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .common-footer-wrap {
+    width: 100%;
+    padding: 5px;
+    padding-bottom: 60px;
+  }
+  .common-footer-arrayone {
+    padding: 10px 0 10px 5px;
+    border-bottom: 1px solid #ddd;
+  }
+  .common-footer-arrayone > a > span {
+    display: none;
+  }
+  .common-footer-arrayone > a i {
+    padding-right: 15px;
+  }
+  .common-footer-arraytwo {
+    font-size: 11px;
+    gap: 12px;
+  }
+  .common-footer-arraytwo li {
+    padding-right: 12px;
+    border-right: 1px solid #777;
+  }
+  .footer-active-vi {
+    font-size: 11px;
+    font-weight: bold;
+  }
+
+  .common-footer-arraythree {
+    padding-top: 10px;
+    justify-content: flex-start;
+    gap: 20px;
+  }
+  .common-footer-owner {
+    gap: 8px;
+  }
+  .common-footer-contact {
+    margin-top: 30px;
+    width: 300px;
+  }
+  .common-footer-contact-inner span {
+    font-size: 11px;
+  }
+  .common-footer-contact-title,
+  .common-footer-contact-inner svg,
+  .common-footer-owner img,
+  .common-footer-time {
+    display: none;
+  }
+  .common-footer-arrayfour {
+    flex-direction: column;
+    gap: 30px;
+    margin: 30px 0 0 8px;
+  }
+}
+@media screen and (max-width: 390px) {
+  .common-footer-notice a {
+    font-size: 12px;
+  }
+  .common-footer-notice a span {
+    font-size: 13px;
+  }
+  .common-footer-arraythree {
+    flex-direction: column;
+  }
+  .common-footer-contact {
+    margin: 0 8px;
   }
 }
