--- a/Header/style.css
+++ b/Header/style.css
@@ -89,11 +89,11 @@ header.common-toggle-active {
   color: #333;
 }
 .common-search-box-header {
-  display: none;
+  display: block;
   /*Main메뉴 제외하고 모두 display block*/
   position: fixed;
-  right: 120px;
-  top: 48px;
+  right: 110px;
+  top: 54px;
   align-items: center;
   width: 21%;
   height: 44px;
@@ -142,12 +142,9 @@ header.common-toggle-active {
   height: 20px;
 }
 .common-search-btn i {
-  /*Main제외하고 display none*/
-
   display: flex;
   text-align: center;
   font-size: 25px;
-  /* margin-top: 8px; */
   color: #333;
   cursor: pointer;
 }
@@ -179,6 +176,7 @@ header.common-toggle-active {
   background: #333;
   transition: all 0.5s;
 }
+
 .common-trigger-btn span:nth-child(1),
 .common-repon-toggle-btn span:nth-child(1) {
   top: 0;
@@ -700,11 +698,8 @@ header.common-toggle-active {
 .common-shopping-at {
   border: 1px solid #a6a6a6;
   position: fixed;
-  /* left: 326px; */
-  /* left: 18%; */
   right: 64%;
-  /* bottom: 220px; */
-  bottom: 20%;
+  bottom: 12%;
   background: #fff;
   border-radius: 10px;
   height: auto;
@@ -716,11 +711,12 @@ header.common-toggle-active {
 
 .common-brand-store-select {
   display: flex;
-  justify-content: first;
+  justify-content: flex-start;
   align-items: center;
   height: 40px;
   color: #333;
   cursor: pointer;
+  width: 343px;
 }
 .common-brand-store-select span {
   display: inline-block;
@@ -740,25 +736,25 @@ header.common-toggle-active {
   margin: 0 15px 0 70px;
   transition: all 0.3s;
 }
-.common-brand-store-select.common-active-store-list {
+.common-brand-store-select.active {
   background: #f3f3f3;
   border-radius: 10px;
   border-bottom: 1px solid #a6a6a6;
 }
-.common-brand-store-select i.common-active-store-list {
+.common-brand-store-select i.active {
   transform: rotate(180deg);
 }
-.common-brand-store-select p.common-active-store-list {
+.common-brand-store-select p.active {
   opacity: 0;
 }
-.common-store-list.common-active-store-list {
+.common-store-list.active {
   opacity: 1;
 }
 .common-store-list {
   position: absolute;
   left: -1px;
   bottom: 85%;
-  width: 343px;
+  width: 345px;
   height: 160px;
   border-radius: 10px 10px 0 0;
   border: 1px solid #a6a6a6;
@@ -835,6 +831,7 @@ header.common-toggle-active {
   transition: all 0.3s;
 }
 #common-addtocart.active {
+  display: block;
   right: 20px;
 }
 
@@ -915,7 +912,6 @@ header.common-toggle-active {
   height: 45px;
   line-height: 45px;
   text-align: center;
-  /* background: #ddd; */
   border-bottom: 2px solid#111;
   color: #111;
   font-family: "sofia";
@@ -964,7 +960,14 @@ header.common-toggle-active {
   height: 45px;
   font-family: "sofia";
   font-weight: 500;
+}
 
+.common-responsibility-menu-plus {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 50px;
+  height: 30px;
   cursor: pointer;
 }
 .common-responsibility-menu-plus span {
@@ -972,23 +975,33 @@ header.common-toggle-active {
   width: 12px;
   position: absolute;
 }
+
 .common-responsibility-menu-plus span:nth-child(2) {
   transform: rotate(90deg);
   transition: all 0.3s;
 }
 .common-responsibility-menu-plus span:nth-child(2).active {
-  transform: translateY(-50%);
+  transform: rotate(0);
 }
 .common-responsibility-menu-list {
   width: 100%;
   height: 68px;
   background: #f1f1f1;
   font-size: 13px;
-  padding-top: 8px;
+  padding-top: 3px;
+  display: none;
+}
+
+.commonplus,
+.commonlistnone {
   display: none;
 }
 .common-responsibility-menu-list.active {
   display: block;
+}
+
+.commonlistnone.active {
+  display: none;
 }
 .common-ppo,
 .common-mem,
@@ -1014,34 +1027,43 @@ header.common-toggle-active {
 .common-cate-wrap {
   display: flex;
 }
+.common-responsibility-menu-cate-left,
 .common-responsibility-menu-cate {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 44%;
   margin: 12px 30px;
-  font-size: 15px;
+  font-size: 14px;
   position: relative;
 }
 
-.common-responsibility-menu-plus-cate span {
+.common-responsibility-menu-plus-cate span,
+.common-responsibility-menu-plus-cate-l span {
   border: 1px solid #777;
   width: 8px;
   position: absolute;
   right: 0;
 }
-.common-responsibility-menu-plus-cate span:nth-child(2) {
+.common-responsibility-menu-plus-cate span:nth-child(2),
+.common-responsibility-menu-plus-cate-l span:nth-child(2) {
   transform: rotate(90deg);
+  transition: all 0.3s;
+}
+.common-responsibility-menu-plus-cate span:nth-child(2).active,
+.common-responsibility-menu-plus-cate-l span:nth-child(2).active {
+  transform: rotate(0);
 }
 .common-responsibility-menu-list-cate {
-  /* display: block;으로 바꿔주기 */
   display: none;
-  width: 100%;
-  height: 100px;
+  width: auto;
+  height: auto;
   background: #f1f1f1;
-  font-size: 13px;
-  padding-top: 8px;
-  border: 1px solid red;
+  font-size: 12px;
+  padding: 2px 0 0 20px;
+}
+.common-responsibility-menu-list-cate.active {
+  display: block;
 }
 .common-responsibility-menu-list-cate a {
   display: inline-block;
@@ -1059,8 +1081,10 @@ header.common-toggle-active {
   padding-top: 8px;
   position: absolute;
   left: 0;
-  /*밑에 아이 요소가 깔려있음*/
   top: 37px;
+}
+.common-responsibility-menu-list-cate-lip.active {
+  display: block;
 }
 .common-responsibility-menu-list-cate-lip a {
   display: inline-block;
@@ -1072,17 +1096,12 @@ header.common-toggle-active {
   position: absolute;
   left: 0;
   bottom: 4%;
-
   height: 50px;
   width: 100%;
 }
 .common-responsibility-shopping-at {
   border: 1px solid #a6a6a6;
   position: absolute;
-  /* left: 326px; */
-  /* left: 18%; */
-
-  /* bottom: 220px; */
   left: 5%;
   bottom: 5%;
   background: #fff;
@@ -1091,6 +1110,7 @@ header.common-toggle-active {
   width: 90%;
 }
 #common-responsibility-brand-store {
+  border-radius: 10px;
   width: 100%;
   height: 38px;
 }
@@ -1136,7 +1156,6 @@ header.common-toggle-active {
 }
 .common-responsibility-store-list {
   position: absolute;
-  left: -1px;
   bottom: 85%;
   width: 100%;
   height: 160px;
@@ -1171,7 +1190,7 @@ header.common-toggle-active {
 }
 .ex-wrap {
   height: auto;
-  background: white;
+
   opacity: 1;
 }
 
@@ -1215,6 +1234,18 @@ footer {
   padding-left: 8px;
   font-size: 14px;
   font-weight: bold;
+}
+.common-footer-family > a i {
+  transition: all 0.3s;
+}
+.common-footer-family > a i.active {
+  transform: rotate(180deg);
+}
+.common-footer-Map > a i {
+  transition: all 0.3s;
+}
+.common-footer-Map > a i.active {
+  transform: rotate(180deg);
 }
 .common-footer-site {
   display: flex;
@@ -1280,6 +1311,7 @@ footer {
   padding: 40px 80px;
   border: 1px solid #777;
 }
+
 .common-footer-Map-detail {
   display: flex;
   flex-wrap: wrap;
