--- a/240314/cyworld.css
+++ b/240314/cyworld.css
@@ -167,3 +167,25 @@ iframe {
   height: 100%;
 }
 /* ============wrapper_nav============= */
+.navigation {
+  width: 80px;
+  height: 110px;
+  position: absolute;
+  top: 10%;
+  right: -52px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.navi-item {
+  width: 85%;
+  height: 30px;
+  background: #298eb5;
+  color: #fff;
+  text-align: center;
+  border: 1px solid #000;
+  border-radius: 0 5px 5px 0;
+  line-height: 28px;
+  font-size: 14px;
+  cursor: pointer;
+}
