--- a/Header/style.css
+++ b/Header/style.css
@@ -825,6 +825,7 @@ header.common-toggle-active {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.17);
   transition: all 0.3s;
   cursor: pointer;
+  z-index: 20;
 }
 #common-addtocart i {
   font-size: 36px;
