--- a/240315/style01.css
+++ b/240315/style01.css
@@ -13,7 +13,9 @@ a {
 body {
   display: flex;
   justify-content: center;
-  background: teal;
+  background: url("./petit.jpg") center/cover no-repeat;
+  width: 100%;
+  height: 100vh;
 }
 .container {
   width: 80%;
@@ -61,6 +63,7 @@ input[type="submit"] {
 }
 
 .list {
+  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 1rem;
