--- a/Header_S/style.css
+++ b/Header_S/style.css
@@ -24,7 +24,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
 
-  /* background-color: thistle; */
+  background-color: palevioletred;
 }
 
 header {
@@ -381,7 +381,8 @@ header.common-toggle-active {
 }
 .common-responsibility-brand-top-menu,
 .common-responsibility-product-top-menu,
-.common-responsibility-foundation-top-menu {
+.common-responsibility-foundation-top-menu,
+.common-responsibility-store-top-menu {
   display: none;
 }
 
@@ -470,7 +471,7 @@ header.common-toggle-active {
   color: #777;
   outline: none;
   border: none;
-  background: rgba(231, 232, 234, 0.5);
+  background: transparent;
 }
 #common-search-box-inner::placeholder {
   color: #777;
@@ -1264,6 +1265,7 @@ header.common-toggle-active {
 .common-responsibility-store-list div:hover {
   background: #f3f3f3;
 }
+
 .ex {
   height: 1000px;
   color: red;
@@ -1718,13 +1720,10 @@ footer {
   .common-S {
     display: flex;
   }
-  /*반응형 헤더 foundation부분*/
-  .common-F {
-    display: none;
-  }
+
   .common-responsibility-store-top-menu {
     /*store일 때만 flex*/
-    display: none;
+    display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -1747,6 +1746,10 @@ footer {
     left: 4%;
     transition: all 0.3s;
   }
+
+  .common-responsibility-store-top-menu a::before.active {
+    background: #222;
+  }
   .common-responsibility-store-top-menu a:nth-child(1)::before {
     opacity: 1;
   }
@@ -1762,8 +1765,13 @@ footer {
   .common-responsibility-store-top-menu a span {
     color: #777;
   }
-  .common-responsibility-store-top-menu a:first-child span {
+  .common-responsibility-store-top-menu a:first-child span.active {
     color: #222;
+  }
+
+  /*반응형 헤더 foundation부분*/
+  .common-F {
+    display: none;
   }
   .common-responsibility-foundation-top-menu {
     /* display: flex;으로 바꾸기 */
@@ -1791,6 +1799,7 @@ footer {
     left: 4%;
     transition: all 0.3s;
   }
+
   .common-responsibility-foundation-top-menu a:nth-child(1)::before {
     opacity: 1;
   }
@@ -1812,7 +1821,7 @@ footer {
 
   .common-search-click-icon {
     margin-top: -20px;
-    margin-left: 0;
+    margin-left: 100px;
   }
   .common-search-box {
     width: 92%;
