--- a/Product_S/proStyle.css
+++ b/Product_S/proStyle.css
@@ -23,7 +23,8 @@ a {
 body {
   overflow-x: hidden;
   overflow-y: auto;
-  height: auto;
+
+  /* background-color: thistle; */
 }
 
 header {
@@ -75,13 +76,17 @@ header.common-toggle-active {
   left: 0;
   top: 14%;
   justify-content: space-between;
+  align-items: center;
   width: 56px;
 }
 .common-responsibility-back-icon {
+  display: inline-block;
   font-size: 23px;
   color: #333;
+  width: 20px;
+  padding-left: 5px;
 }
-.common-responsibility-home-icon img {
+.common-responsibility-home-icon svg {
   width: 23px;
   margin-top: 4px;
   color: #333;
@@ -139,13 +144,12 @@ header.common-toggle-active {
 .common-search-btn,
 .common-toggle-btn {
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 50px;
+  height: 40px;
 }
-.common-search-btn i {
+.common-search-btn img {
   display: flex;
   text-align: center;
-  font-size: 25px;
   color: #333;
   cursor: pointer;
 }
@@ -363,15 +367,22 @@ header.common-toggle-active {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  align-items: center;
 }
 .common-responsibility-menu-title span {
+  font-family: "Noto Sans KR";
   font-size: 16px;
-  font-weight: bold;
-  color: #222;
+  font-weight: 500;
+  color: #333;
+}
+.common-responsibility-center-menu i {
+  display: inline-block;
+  font-size: 12px;
 }
 .common-responsibility-brand-top-menu,
 .common-responsibility-product-top-menu,
-.common-responsibility-foundation-top-menu {
+.common-responsibility-foundation-top-menu,
+.common-responsibility-store-top-menu {
   display: none;
 }
 
@@ -460,7 +471,7 @@ header.common-toggle-active {
   color: #777;
   outline: none;
   border: none;
-  background: rgba(231, 232, 234, 0.5);
+  background: transparent;
 }
 #common-search-box-inner::placeholder {
   color: #777;
@@ -470,10 +481,10 @@ header.common-toggle-active {
 #common-search-box-inner:focus {
   outline: none;
 }
-.common-search-box-icon i {
+.common-search-box-icon img {
   display: inline-block;
   font-size: 20px;
-  padding: 10px;
+  /* padding: 10px; */
   color: #666;
   cursor: pointer;
 }
@@ -826,6 +837,7 @@ header.common-toggle-active {
   cursor: pointer;
   z-index: 1000;
 }
+
 #common-addtocart i {
   font-size: 36px;
   font-weight: lighter;
@@ -836,6 +848,65 @@ header.common-toggle-active {
 #common-addtocart.active {
   display: block;
   right: 20px;
+}
+.common-addtocart-click {
+  display: none;
+  overflow: hidden;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(1px);
+  font-family: "Noto Sans KR";
+  opacity: 1;
+}
+.common-addtocart-wrap {
+  position: absolute;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  justify-content: center;
+  gap: 10px;
+  bottom: -250px;
+  color: #f5e2e2;
+  font-family: "sofia";
+  animation: addcart 0.2s ease-out both;
+}
+
+@keyframes addcart {
+  0% {
+    bottom: 70px;
+  }
+  50% {
+    bottom: 120px;
+  }
+  100% {
+    bottom: 160px;
+  }
+}
+
+.common-addtocart-wrap span {
+  display: inline-block;
+  background: #fff;
+  width: 44px;
+  height: 44px;
+  border-radius: 100%;
+  text-align: center;
+  line-height: 50px;
+  margin-left: 10px;
+}
+.add-fa img {
+  margin-top: 6px;
+}
+.add-qa {
+  display: flex;
+  align-items: center;
+  position: static;
+  margin-left: 70px;
 }
 
 /*-------반응형 메뉴버튼 -----------*/
@@ -858,12 +929,15 @@ header.common-toggle-active {
 }
 .common-responsibility-toggle-menu-header {
   display: flex;
+  align-items: center;
   width: 100%;
 }
 .common-responsibility-search-box {
   /* width: 99%; */
+  display: flex;
+  align-items: center;
   padding-left: 10px;
-  width: 94%;
+  width: 92%;
   height: 41px;
   margin: 10px 2% 0;
   font-size: 15px;
@@ -886,16 +960,19 @@ header.common-toggle-active {
 }
 .common-responsibility-search-box-icon {
   position: absolute;
-  right: 5px;
-  top: 2px;
+  right: 2px;
+  top: 0;
   font-size: 23px;
+  cursor: pointer;
 }
 .common-responsibility-search-box-icon-x {
-  position: relative;
   display: inline-block;
-  width: 30px;
+  position: absolute;
+  right: 4%;
+  top: 15px;
+  padding-left: 5px;
+  width: 2%;
   height: 30px;
-  margin: 14px auto;
   cursor: pointer;
 }
 
@@ -915,8 +992,8 @@ header.common-toggle-active {
   height: 45px;
   line-height: 45px;
   text-align: center;
-  border-bottom: 2px solid#111;
-  color: #111;
+  border-bottom: 2px solid #777;
+  color: #777;
   font-family: "sofia";
   font-weight: 500;
   cursor: pointer;
@@ -1039,6 +1116,7 @@ header.common-toggle-active {
   margin: 12px 30px;
   font-size: 14px;
   position: relative;
+  cursor: pointer;
 }
 
 .common-responsibility-menu-plus-cate span,
@@ -1188,12 +1266,18 @@ header.common-toggle-active {
   background: #f3f3f3;
 }
 
+.ex {
+  height: 1000px;
+  color: red;
+}
+.ex-wrap {
+  height: auto;
+  opacity: 1;
+}
+
 /*----------Desktop footer-----------*/
 
 footer {
-  position: static;
-  left: 0;
-  bottom: 0;
   height: auto;
   width: 100%;
   background: #f7f7f7;
@@ -1278,7 +1362,7 @@ footer {
   font-weight: 500;
   color: #111;
   border-radius: 5px 5px 0 0;
-  /* z-index: 10; */
+  background: #fff;
   box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.2);
 }
 .common-footer-family-hidden a {
@@ -1493,27 +1577,31 @@ footer {
   top: 0;
   width: 30%;
   height: 100vh;
+  overflow: hidden;
 }
-.pro-silder-img span {
+.pro-silder-img li {
   position: absolute;
   left: 0;
-  top: 0;
   width: 100%;
   height: 100vh;
 }
-.pro-silder-img span:nth-child(1) {
-  background: url("./product_img/img-categoty-new2.jpg") center/cover no-repeat;
+.pro-silder-img li img {
+  position: absolute;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.pro-silder-img li:nth-child(1) {
   opacity: 1;
   animation: pro-slider-tint 5s linear;
   animation-delay: 5s;
 }
-.pro-silder-img span:nth-child(2) {
-  background: url("./product_img/img-categoty-new1.jpg") center/cover no-repeat;
+.pro-silder-img li:nth-child(2) {
   opacity: 0;
   animation: pro-slider 5s linear;
 }
-.pro-silder-img span:nth-child(3) {
-  background: url("./product_img/img-categoty-new3.jpg") center/cover no-repeat;
+.pro-silder-img li:nth-child(3) {
   opacity: 0;
   animation: pro-slider-tool 8s linear;
   animation-delay: 8s;
@@ -1610,6 +1698,9 @@ footer {
   font-family: "Noto Sans KR";
 }
 .new-product-hidden-menu {
+  position: absolute;
+  left: 20px;
+  top: 60px;
   display: none;
   flex-direction: column;
   color: #333;
@@ -1619,16 +1710,16 @@ footer {
   height: 80px;
   justify-content: center;
   align-items: center;
-  opacity: 0;
   transition: all 0.3s;
+  background: #fff;
 }
 .new-product-hidden-menu.active {
   display: flex;
-  opacity: 1;
+  z-index: 50;
 }
 .new-product-hidden-menu a {
   text-align: center;
-  line-height: 40px;
+  line-height: 39px;
   border-radius: 5px;
   width: 100%;
   height: 80px;
@@ -1644,13 +1735,13 @@ footer {
   align-items: center;
   justify-content: space-between;
   margin-top: 50px;
-  /* width: 102%; */
 }
 .pro-total {
   font-size: 15px;
   font-weight: 600;
   font-family: "Noto Sans KR";
   margin-left: 20px;
+  z-index: -5;
 }
 .pro-array-select {
   display: flex;
@@ -1659,8 +1750,12 @@ footer {
   font-size: 24px;
   color: #a6a6a6;
 }
+.pro-array-select .fa-list:hover,
+.fa-buromobelexperte:hover {
+  color: #222;
+}
 .fa-square {
-  font-size: 22px;
+  font-size: 24px;
 }
 
 .pro-icon-make {
@@ -1671,6 +1766,7 @@ footer {
   height: 36px;
   margin-top: 4px;
 }
+
 .pro-icon-bar {
   display: inline-block;
   width: 22px;
@@ -1736,7 +1832,7 @@ footer {
 .proMenuArray {
   position: relative;
   width: 100%;
-  height: 80%;
+  height: 100%;
   display: flex;
   margin-top: 15px;
 
@@ -1744,7 +1840,6 @@ footer {
 }
 
 .pro-product-list {
-  height: auto;
   width: 96%;
   display: flex;
   flex-wrap: wrap;
@@ -1755,7 +1850,6 @@ footer {
 
 .pro-product-list-two,
 .pro-product-list-three {
-  flex-wrap: wrap;
   width: 96%;
   display: none;
   height: 78%;
@@ -1772,8 +1866,7 @@ footer {
 .pro-product-list-two li,
 .pro-product-list-three li {
   position: relative;
-  width: 24%;
-  min-width: 20%;
+  width: 310px;
   height: 500px;
   border-radius: 5px;
   background: #fafafa;
@@ -1808,7 +1901,7 @@ footer {
 .pro-product-list-three li > a {
   display: inline-block;
   overflow: hidden;
-  height: 60%;
+  height: 62%;
   width: 100%;
 }
 .pro-product-list li > a.active,
@@ -1864,7 +1957,7 @@ footer {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 92%;
+  width: 94%;
   height: 35%;
   padding: 10px 15px;
   position: absolute;
@@ -1895,7 +1988,7 @@ footer {
 }
 .product-color-group {
   position: absolute;
-  width: 100%;
+  width: 90%;
   height: auto;
   left: 18px;
   bottom: 20%;
@@ -1967,20 +2060,22 @@ footer {
 @media screen and (max-width: 1024px) {
   /*----------Header-----------*/
   header {
-    height: 50px;
+    height: 328px;
   }
   .common-header-wrap {
-    /*brand, foundation factory에서는 활성화 시켜줌
-    background: rgba(255, 255, 255, 0.8);*/
+    /*main, product, makeup에서는 투명하게*/
+    background: rgba(255, 255, 255, 0.8);
+    /* background: transparent; */
     height: 50px;
   }
   .common-header-menu {
     display: none;
   }
   .common-header-main {
+    display: flex;
+    align-items: center;
     height: 50px;
-    margin: auto 20px;
-    padding: 0;
+    margin: auto 18px;
   }
   header.active {
     background: none;
@@ -1996,17 +2091,28 @@ footer {
     margin-left: 50px;
   }
   .common-logo-img img {
-    display: none;
     /*main page 말고 메뉴 페이지에서는 display none*/
+    display: none;
   }
   .common-responsibility-left-icon {
+    /*main page 말고 메뉴 페이지에서는 display flex*/
     display: flex;
   }
-  .common-responsibility-center-menu {
-    display: flex;
+  .common-responsibility-center-menu span {
+    color: #000;
+    font-family: "Inter";
+    font-size: 15px;
+    letter-spacing: -0.6px;
+  }
+  .common-responsibility-center-menu i {
+    cursor: pointer;
   }
   /*반응형 헤더 Brand부분*/
 
+  .common-B {
+    /* 페이지 이동시 flex */
+    display: none;
+  }
   .common-responsibility-brand-top-menu {
     /* display: flex;으로 바꾸기 */
     display: none;
@@ -2047,20 +2153,29 @@ footer {
 
   .common-responsibility-brand-top-menu a span {
     color: #777;
-    font-weight: bold;
+  }
+  .common-responsibility-brand-top-menu a:nth-child(1) span {
+    color: #777;
+    font-family: "sofia";
   }
   .common-responsibility-brand-top-menu a:first-child span {
     color: #222;
   }
   /*반응형 헤더 product & makeup부분*/
+  .common-P {
+    display: none;
+  }
+  .common-M {
+    display: none;
+  }
   .common-responsibility-product-top-menu {
-    /*product와 makeup에서는 display:flex*/
+    /* common-P/ common-M 누르면 display flex 자바스트립트로 조작 */
     display: none;
     flex-direction: column;
     align-items: center;
     justify-content: start;
     height: 278px;
-    padding-top: 5px;
+    padding-top: 10px;
     background: rgba(255, 255, 255, 0.8);
     gap: 14px;
   }
@@ -2068,7 +2183,8 @@ footer {
     display: flex;
     flex-direction: column;
     text-align: center;
-    gap: 4px;
+    font-style: "Noto Sans KR";
+    gap: 2px;
   }
   .common-responsibility-product-top-menu-inner a {
     display: block;
@@ -2083,14 +2199,72 @@ footer {
     font-size: 16px;
     font-weight: 400;
     color: #111;
+    font-family: "Noto Sans KR";
   }
   .common-inner-list-title span {
-    font-size: 13px;
+    font-family: "sofia";
+    font-size: 14px;
     font-weight: 500;
     color: #777;
   }
 
+  /*반응형 헤더 store부분*/
+  .common-S {
+    display: flex;
+  }
+
+  .common-responsibility-store-top-menu {
+    /*store일 때만 flex*/
+    display: none;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    background: rgba(255, 255, 255, 0.8);
+  }
+  .common-responsibility-store-top-menu a {
+    flex: 1;
+    position: relative;
+    transition: all 0.3s;
+  }
+  .common-responsibility-store-top-menu a::before {
+    opacity: 0;
+    content: "";
+    position: absolute;
+    width: 90%;
+    height: 2px;
+    background: #222;
+    bottom: -14px;
+    left: 4%;
+    transition: all 0.3s;
+  }
+
+  .common-responsibility-store-top-menu a::before.active {
+    background: #222;
+  }
+  .common-responsibility-store-top-menu a:nth-child(1)::before {
+    opacity: 1;
+  }
+  .common-responsibility-store-top-menu a:nth-child(1):hover::before,
+  .common-responsibility-store-top-menu a:nth-child(2):hover::before {
+    opacity: 1;
+  }
+
+  .common-responsibility-store-top-menu a:nth-child(2):hover span {
+    color: #222;
+  }
+
+  .common-responsibility-store-top-menu a span {
+    color: #777;
+  }
+  .common-responsibility-store-top-menu a:first-child span.active {
+    color: #222;
+  }
+
   /*반응형 헤더 foundation부분*/
+  .common-F {
+    display: none;
+  }
   .common-responsibility-foundation-top-menu {
     /* display: flex;으로 바꾸기 */
     display: none;
@@ -2100,6 +2274,7 @@ footer {
     height: 50px;
     background: rgba(255, 255, 255, 0.8);
   }
+
   .common-responsibility-foundation-top-menu a {
     flex: 1;
     position: relative;
@@ -2116,6 +2291,7 @@ footer {
     left: 4%;
     transition: all 0.3s;
   }
+
   .common-responsibility-foundation-top-menu a:nth-child(1)::before {
     opacity: 1;
   }
@@ -2130,14 +2306,14 @@ footer {
 
   .common-responsibility-foundation-top-menu a span {
     color: #777;
-    font-weight: bold;
   }
   .common-responsibility-foundation-top-menu a:first-child span {
     color: #222;
   }
+
   .common-search-click-icon {
     margin-top: -20px;
-    margin-left: 8%;
+    margin-left: 0;
   }
   .common-search-box {
     width: 92%;
@@ -2199,16 +2375,17 @@ footer {
     margin-top: 60px;
     width: 100%;
   }
+
   .pro-product-list {
     margin: 0;
-    width: 1024px;
+    width: 100%;
     height: auto;
     flex-wrap: wrap;
   }
   .pro-product-list-two,
   .pro-product-list-three {
     margin: 0;
-    width: 1024px;
+    width: 100%;
     height: auto;
     flex-wrap: wrap;
   }
@@ -2218,7 +2395,6 @@ footer {
   .pro-product-list-three li {
     width: 24%;
     height: 480px;
-    /* height: 480px; */
   }
   .pro-product-list li > a img,
   .pro-product-list-two li > a img,
@@ -2230,6 +2406,7 @@ footer {
   .pro-product-list li > a,
   .pro-product-list-two li > a,
   .pro-product-list-three li > a {
+    width: 100%;
     height: 240px;
   }
   .pro-product-list li.active,
@@ -2303,6 +2480,30 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
+  /*=========header=======*/
+  .common-header-wrap {
+    /*main빼고 모두 활성화 시켜줌*/
+    background: rgba(255, 255, 255, 0.8);
+    height: 50px;
+  }
+  .common-search-click-header {
+    height: 0;
+  }
+
+  .common-search-for {
+    margin-top: 30px;
+  }
+  .common-search-tag a {
+    margin: 4px;
+  }
+  .common-search-click-header img {
+    display: none;
+  }
+  .common-search-click-header i {
+    position: absolute;
+    right: 10px;
+  }
+
   /*=======product=======*/
 
   .proMenuArray {
@@ -2310,6 +2511,23 @@ footer {
     margin: 0;
     padding: 0;
     height: 80%;
+  }
+
+  .pro-array-menu span {
+    font-size: 14px;
+  }
+  .pro-array-select {
+    gap: 8px;
+  }
+  .pro-array-select i {
+    font-size: 20px;
+  }
+  .pro-icon-make {
+    display: none;
+  }
+  .pro-icon-shin .fa-chevron-down {
+    font-size: 12px;
+    padding-left: 5px;
   }
   .pro-product-list,
   .pro-product-list-two,
@@ -2319,65 +2537,63 @@ footer {
   .pro-product-list li,
   .pro-product-list-two li,
   .pro-product-list-three li {
-    width: 49%;
-    height: 550px;
+    width: 100%;
+    height: auto;
   }
   .pro-product-list li a,
   .pro-product-list-two li a,
   .pro-product-list-three li a {
-    height: 68%;
+    height: 74%;
   }
   .pro-product-list li a img,
   .pro-product-list-two li a img,
   .pro-product-list-three li a img {
-    height: 100%;
-  }
-  .product-detail {
-    height: 20%;
-  }
-  /* .pro-section {
-    border: 1px solid red;
-  }
-
-  .proMenuArray {
-    border: 2px solid orange;
-    height: 2800px;
-  }
-  .pro-product-list {
-    border: 5px solid blue;
-    height: 2000px;
-  }
-  .pro-product-list-two,
-  .pro-product-list-three {
-    height: 2000px;
-  }
-  .pro-product-list li,
-  .pro-product-list-two li,
-  .pro-product-list-three li {
-    width: 49%;
-    height: 20%;
-  }
-  .product-detail {
-    height: 100px;
-
-    bottom: -30px;
-  }
-  .product-price {
-    bottom: 2%;
-  }
-
-  .pro-product-list li > a img,
-  .pro-product-list-two li > a img,
-  .pro-product-list-three li > a img {
-    float: left;
     width: 100%;
-    height: auto;
-  }
-  .pro-product-list li > a,
-  .pro-product-list-two li > a,
-  .pro-product-list-three li > a {
     height: 100%;
-  } */
+  }
+  .product-detail {
+    width: 98%;
+    height: 22%;
+  }
+  .product-desc {
+    font-size: 0.8rem;
+  }
+  .product-innerName {
+    font-size: 1rem;
+  }
+
+  .product-price {
+    bottom: 0;
+    width: 90%;
+  }
+  .pro-product-list li.active,
+  .pro-product-list-two li.active,
+  .pro-product-list-three li.active {
+    position: relative;
+    width: 100%;
+  }
+  .pro-product-list li > a img.active,
+  .pro-product-list-two li > a img.active,
+  .pro-product-list-three li > a img.active {
+    width: 50%;
+  }
+
+  .product-detail.active {
+    display: flex;
+    flex-direction: column;
+    left: 50%;
+    width: 50%;
+    height: 68%;
+  }
+
+  .product-select-color.active {
+    width: 8%;
+    height: 8%;
+  }
+  .product-price.active {
+    left: 52%;
+    bottom: 20px;
+  }
 
   /*=======footer===========*/
   .common-footer-wrap {
